# number_place_resolver

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
src/: main.py
