[tool.poetry]
name = "number_place_resolver"
version = "0.1.0"
description = ""
authors = ["u-masao <4973920+u-masao@users.noreply.github.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pysen = "^0.9.1"
isort = "^5.10.0"
black = "20.8b1"
flake8 = "3.7.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.9"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
line_length = 79
[[tool.pysen.lint.mypy_targets]]
paths = ["."]
